# exampapel-fastapi-backend

./: .env.example  .env.production.example  Authorization-libary.py  CLEANUP_STATUS_FINAL.md  DEPRECATION_CLEANUP_SUMMARY.md  DOCS-WORKFLOW-FIX.md  Documentation.txt  GITHUB-ACTIONS-PERMISSIONS-FIX.md  Makefile  Makefile.complex.backup  PERFORMANCE_OPTIMIZATION_SUMMARY.md  QUESTION_MODEL_MIGRATION_SUMMARY.md  QUESTION_MODEL_UPDATES.md  README.md  RESPONSE_VALIDATION_ERROR_FIX.md  RESPONSE_VALIDATION_FIX_SUMMARY.md  SIMPLE-CI-CD-GUIDE.md  SMART_STARTUP_SYSTEM.md  UNIFIED_CRUD_MIGRATION.md  bit-1103-august-2011-basic-electricity-2010-2011-with-image-refs.md  create-dbs.sql  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.prod.yml  docker-compose.yml  exam_paper_inserter.py  exampaper_questionpaper.md  exams_fastapi_db_clean_backup.dump  exams_fastapi_db_clean_backup.sql  inserter.py  inserter.py_FIXES_SUMMARY.md  reproduce_slug_issue.py  setup-ci-cd.sh  setup-test-env.sh  test_conditional_init.py  test_questions_endpoint.py  toc.txt  update_json copy.py  update_json.py  verify_cleanup.py  (+2 more)
backend/app/: README.md  add_tvc_enum.py  backfill_course_faculties.py  check_duplicates.py  check_programmes.py  fix_media_paths.py  inspect_constraints.py  kuccps_institutions_2025-04-26-master-UPDATED.json  pyproject.toml  pytest.complex.backup  pytest.ini  schedule.db  test_connectivity.py  test_password_validation.py  test_question_init.py  update_answer_vote_constraint.py  update_enum.sql  verify_enum.py  verify_sorting.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2024-05-06-14-01_c0129291ffbe.py  2024-05-06-14-31_ee0243950f69.py  2024-05-06-16-03_038ee86c4365.py  2024-05-06-19-23_ddca5e7d8a53.py  2024-05-06-19-28_4adc5112ca32.py  2024-05-06-19-50_697b488bb3e5.py  2024-05-06-19-59_45c099f11e46.py  2024-05-06-20-07_fb7e27482e8b.py  2024-05-06-20-10_a9f49728c7b4.py  2024-05-07-06-19_728d6ee4245e.py  2024-05-07-06-39_ac9063113e1e.py  2024-05-07-06-46_b97c7b3b14c7.py  2024-05-07-06-51_261406974018.py  2024-05-07-06-55_0e54eecb0504.py  2024-05-07-06-57_60175a5892dc.py  2024-05-07-07-04_1d43d9bb4e14.py  2024-05-07-07-06_23c93458cfaa.py  2024-05-07-07-12_ecc9051870aa.py  2024-05-07-21-35_d460e19ea7bc.py  2024-05-07-21-42_eec2d174ae4a.py  2024-05-07-22-07_aecfb12b61f8.py  2024-05-07-22-08_05aadb1d86d4.py  2024-05-07-23-02_7a1fcac56508.py  2024-05-08-06-56_76b0ac8da535.py  2024-05-08-07-16_bc3c9337bfa0.py  2024-05-08-07-20_49526e07cba8.py  2024-05-08-07-20_b76474785182.py  2024-05-08-07-26_d699c567c27c.py  2024-05-08-07-29_ea3528a3b426.py  2024-05-08-08-53_47d0fa3daf8a.py  2024-05-08-08-55_7d2036801b72.py  2024-05-08-09-05_c8a7629c2bd2.py  2024-05-08-09-13_a58e7f46b38f.py  2024-05-08-09-42_fe882f4d5d37.py  2024-05-08-09-48_fdddc371e454.py  2024-05-08-09-54_6fde338b5955.py  2024-05-08-10-08_a5bb11498728.py  2024-05-08-10-22_dfecbbfae057.py  2024-05-08-10-23_d8fdca5a2e83.py  2024-05-08-10-25_e0fa8f8ca560.py  (+247 more)
backend/app/app/: add_tvc_enum.py  backfill_slugs.py  clear_all_dummy.py  deduplicate_slugs.py  health.py  initial_data.py  main.py
backend/app/app/api/: celery_task.py  deps.py
backend/app/app/core/: authz.polar  authz.py  celery.py  config.py  db_restore.py  security.py  startup.py
backend/app/app/crud/: __init__.py  answer_crud.py  audit_log_crud.py  base_crud.py  campus_crud.py  comment_crud.py  course_crud.py  department_crud.py  exam_description_crud.py  exam_paper_crud.py  exam_title_crud.py  faculty_crud.py  group_crud.py  institution_crud.py  instruction_crud.py  main_question_crud.py  module_crud.py  programme_crud.py  question_crud.py  question_set_crud.py  role_crud.py  sub_question_crud.py  user_crud.py
backend/app/app/db/: dummy_clear.py  dump-exams_fastapi_db-202601201849.sql  init_db.py  session.py
backend/app/app/middleware/: activity_logging.py
backend/app/app/models/: __init__.py  answer_model.py  audit_log_model.py  base_uuid_model.py  campus_model.py  comment_model.py  course_model.py  department_model.py  exam_paper_model.py  faculty_model.py  group_model.py  institution_model.py  media_model.py  module_model.py  programme_model.py  question_model.py  role_model.py  user_follow_model.py  user_model.py
backend/app/app/schemas/: address_schema.py  answer_schema.py  audit_log_schema.py  auth_schema.py  campus_schema.py  comment_schema.py  common_schema.py  contact_schema.py  course_schema.py  department_schema.py  exam_paper_builder_schema.py  exam_paper_schema.py  exam_paper_simple_schema.py  faculty_schema.py  group_schema.py  image_media_schema.py  institution_schema.py  media_schema.py  module_schema.py  programme_schema.py  question_schema.py  response_schema.py  user_schema.py
backend/app/app/services/: audit_log_service.py  exam_paper_builder_service.py  pdf_service.py
backend/app/app/utils/: email.py  (+9 more)
(+82 files in other folders)
